--- a/OpenGL-Template/OpenGL-Template.vcxproj.filters
+++ b/OpenGL-Template/OpenGL-Template.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Resource Files\Textures">
       <UniqueIdentifier>{4a01275a-1fac-4481-8406-bffe0e5048d2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\External Includes">
+      <UniqueIdentifier>{4d855c12-ec51-4baa-b730-de2b83601430}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -61,6 +64,12 @@
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\glad\glad.h">
+      <Filter>Header Files\External Includes</Filter>
+    </ClInclude>
+    <ClInclude Include="include\KHR\khrplatform.h">
+      <Filter>Header Files\External Includes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
